@@ -559,6 +559,13 @@ void parse_binding(char *ptr, bool dobind)
     }
 
     if (dobind) {
+	/* If this is a toggle, copy its sequence number. */
+	if (newsc->scfunc == do_toggle_void) {
+	    for (s = sclist; s != NULL; s = s->next)
+		if (newsc->toggle == s->toggle)
+		    newsc->ordinal = s->ordinal;
+	} else
+	    newsc->ordinal = 0;
 	/* Add the new shortcut at the start of the list. */
 	newsc->next = sclist;
 	sclist = newsc;
